# Ferret-rs

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  SETUP.md  install.sh  verify.sh
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
homebrew/: ferret.rb
src/: config.rs  duplicates.rs  grep.rs  main.rs  organize.rs  search.rs  tui.rs  utils.rs
