[package]
name = "ferret-rs"
version = "0.2.1"
edition = "2024"
authors = ["Karmanya03 <karmanya03@proton.me>"]
description = "A blazingly fast file finder, organizer, and pentesting tool for Linux/Unix systems with netcat-style combined flags"
license = "MIT"
repository = "https://github.com/Karmanya03/Ferret-rs"
homepage = "https://github.com/Karmanya03/Ferret-rs"
documentation = "https://github.com/Karmanya03/Ferret-rs#readme"
readme = "README.md"
keywords = ["cli", "file-finder", "pentesting", "security", "utility"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    ".github/",
    "test_output/",
    "organized/",
    "*.log",
    "target/",
]

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
walkdir = "2.5"
colored = "3.0"
regex = "1.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
humansize = "2.1"
rayon = "1.10"
indicatif = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
toml = "0.9.11"
sha2 = "0.10"
dirs = "6.0"
crossterm = "0.29"
ratatui = "0.30"
generic-array = "0.14.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
